# sports-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  Makefile  README.md  pyproject.toml
.claude/agents/: scrum-master.md  test-writer.md
.github/workflows/: build-images.yml  ci.yml  deploy.yml
dags/common/: task_groups.py
dags/mlb/: mlb_ingestion_dag.py  mlb_ml_dag.py  mlb_transform_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/seeds/: mlb_teams.csv
docker/airflow/: Dockerfile
docker/ingestion/: Dockerfile
docker/ingestion-spark/: Dockerfile
docker/mlflow/: Dockerfile
docker/spark/: Dockerfile  entrypoint.sh  spark-defaults.conf
docs/: services.md
infra/helm-values/: airflow-values.yaml  minio-values.yaml  postgres-values.yaml  spark-values.yaml
infra/terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  airflow.tf  ghcr.tf  iceberg.tf  ingress.tf  main.tf  minio.tf  mlflow.tf  outputs.tf  portal.tf  postgres.tf  spark.tf  terraform.tfstate.1779553435.backup  terraform.tfstate.1779555028.backup  terraform.tfstate.1779556135.backup  terraform.tfvars.example  variables.tf  versions.tf
roadmap/backlog/: 010-github-actions-workflows.md  015-nfl-ingest-to-iceberg.md  016-nfl-load-iceberg-to-postgres.md  017-nfl-transform-raw-to-marts.md  018-nfl-ml-gold-to-mlflow.md  019-nba-ingest-to-iceberg.md  020-nba-load-iceberg-to-postgres.md  021-nba-transform-raw-to-marts.md  022-nhl-ingest-to-iceberg.md  023-nhl-load-iceberg-to-postgres.md  024-nhl-transform-raw-to-marts.md  045-mlb-stats-api-source.md
(+111 files in other folders)
