[project]
name = "sports-data-platform"
version = "0.1.0"
description = "Modern data platform for sports analytics across NFL, MLB, NBA, and NHL"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
]

[project.optional-dependencies]
ingestion = [
    "pyspark>=3.5",
    "pybaseball>=2.2",
    "pyiceberg>=0.7",
    "nfl-data-py>=0.3",
    "nba-api>=1.4",
]
ml = [
    "mlflow>=2.14",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
]
dbt = [
    "dbt-postgres>=1.8",
    "sqlfluff>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
